Update CHANGELOG.md with recent changes